...
            "state": "translated",
            "value": "Khi khớp"
          }
        }
      }
    },
    "검색": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
          }
...
            "state": "translated",
            "value": "Bài viết và mọi nội dung trong đó sẽ bị xóa vĩnh viễn. Không thể hoàn tác."
          }
        }
      }
    },
    "글머리": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Bullets"
          }
...
            "state": "translated",
            "value": "Hiệu quả từng bài"
          }
        }
      }
    },
    "글쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Write"
          }
...
            "state": "translated",
            "value": "Ghi chú và các trả lời của bạn cũng mất theo. Không thể hoàn tác."
          }
        }
      }
    },
    "내 계정": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "My Account"
          }
...
            "state": "translated",
            "value": "Xóa ghi chú"
          }
        }
      }
    },
    "노트 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Write a note"
          }
...
            "state": "translated",
            "value": "Thêm vào chuỗi"
          }
        }
      }
    },
    "스튜디오": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Studio"
          }
...
            "state": "translated",
            "value": "Không thể xóa trả lời"
          }
        }
      }
    },
    "대체 텍스트": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Alt text"
          }
...
            "state": "translated",
            "value": "Tuần này chưa có ghi chú nào"
          }
        }
      }
    },
    "이어 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue a draft"
          }
...
            "state": "translated",
            "value": "Tìm tác giả trong Tìm kiếm"
          }
        }
      }
    },
    "발행": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Publish"
          }
...
            "state": "translated",
            "value": "Phiên bản"
          }
        }
      }
    },
    "번호": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Numbered"
          }
...
            "state": "translated",
            "value": "Ảnh trong bài"
          }
        }
      }
    },
    "본문 이어 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue writing"
          }
...
            "state": "translated",
            "value": "Không có bài đã đánh dấu"
          }
        }
      }
    },
    "분석": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Analytics"
          }
...
            "state": "translated",
            "value": "Không thể xóa"
          }
        }
      }
    },
    "새 글": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Post"
          }
...
            "state": "translated",
            "value": "Bài mới"
          }
        }
      }
    },
    "새 글 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Write a new post"
          }
...
            "state": "translated",
            "value": "Tạo đường mới"
          }
        }
      }
    },
    "새 노트": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New note"
          }
...
            "state": "translated",
            "value": "Đọc tiếp %lld bài"
          }
        }
      }
    },
    "이어서 쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue writing"
          }
...
            "state": "translated",
            "value": "%lld chưa đọc"
          }
        }
      }
    },
    "임시저장": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Draft"
          }
...
            "state": "translated",
            "value": "Lưu"
          }
        }
      }
    },
    "저장 상태 보기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "View save status"
          }
...
            "state": "translated",
            "value": "Sau khi lưu, bạn có thể xem trước và hẹn giờ."
          }
        }
      }
    },
    "저장되지 못한 본문이 있어요": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "There's unsaved writing"
          }
...
            "state": "translated",
            "value": "Chính sách"
          }
        }
      }
    },
    "제목": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Title"
          }
...
            "state": "translated",
            "value": "Tác giả gợi ý"
          }
        }
      }
    },
    "취소": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
...
            "state": "translated",
            "value": "Đang theo dõi"
          }
        }
      }
    },
    "편집": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit"
          }
...
